force-app/main/default/objects/Opportunity/fields/Doc_Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Doc_Collection_Status__c</fullName>
    <label>Doc Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Docs To Bill</fullName>
            </value>
            <value>
                <fullName>Docs On File - Pending</fullName>
            </value>
            <value>
                <fullName>All Documents Received</fullName>
            </value>
            <value>
                <fullName>Direct Deposit Letter Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>