force-app/main/default/objects/Opportunity/fields/EGEKO_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Confirmation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Confirmation #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>