force-app/main/default/objects/Opportunity/fields/Egeko_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Egeko_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;https://eu.connect.boomi.com/ws/soap/createeusalesforceopportunity;boomi_auth=c2FsZXNmb3JjZUBkZXhjb21pbmMtNk82SjBPLklQVFNCSjphYWM3Y2UzNi00Yzg0LTQ3ZjMtOWRkOS1kZTlhMmU1M2M1OTY= &quot;, Benefit_EGEKO_Confirmation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egeko Hyperlink</label>
    <type>Text</type>
</CustomField>