force-app/main/default/objects/Opportunity/fields/EGEKO_In__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EGEKO In</label>
    <type>Checkbox</type>
</CustomField>