force-app/main/default/objects/Opportunity/fields/EGEKO_Out__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EGEKO Out</label>
    <type>Checkbox</type>
</CustomField>