force-app/main/default/objects/Opportunity/fields/Email_Stage__c.field-meta.xml
<CustomField>
    <fullName>Email_Stage__c</fullName>
    <label>Email Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>