force-app/main/default/objects/Opportunity/fields/Estimate_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimate Sent Date</label>
    <type>Date</type>
</CustomField>