force-app/main/default/objects/Opportunity/fields/Estimate_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Status__c</fullName>
    <label>Estimate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent by Email</fullName>
            </value>
            <value>
                <fullName>Sent by Fax</fullName>
            </value>
            <value>
                <fullName>Sent by Phone</fullName>
            </value>
            <value>
                <fullName>Sent by Mail</fullName>
            </value>
            <value>
                <fullName>Sent by Online account</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>