force-app/main/default/objects/Opportunity/fields/Estimate_To_Payor_Status__c.field-meta.xml
<CustomField>
    <fullName>Estimate_To_Payor_Status__c</fullName>
    <label>Estimate to Payor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Appeal Sent</fullName>
            </value>
            <value>
                <fullName>Appeal Received</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>