force-app/main/default/objects/Opportunity/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund associated with the Opportunity</description>
    <label>Fund</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fund__c.Payor__c</field>
            <operation>equals</operation>
            <valueField>$Source.Payor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Fund__c.Is_Fund_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Fund is not active.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>