force-app/main/default/objects/Opportunity/fields/Gross_Price_AT__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_AT__c</fullName>
    <formula>Invoice_Net_Price__c +  AT_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>