force-app/main/default/objects/Opportunity/fields/Hard_Copy_Out__c.field-meta.xml
<CustomField>
    <fullName>Hard_Copy_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Copy Out</label>
    <type>Checkbox</type>
</CustomField>