force-app/main/default/objects/Opportunity/fields/Health_Insurance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance_Approval__c</fullName>
    <label>Health Insurance Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>