force-app/main/default/objects/Opportunity/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <formula>Account.High_Priority__c</formula>
    <label>High Priority?</label>
    <type>Text</type>
</CustomField>