force-app/main/default/objects/Opportunity/fields/Insurance_Doc_Received__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Doc_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Doc Received</label>
    <type>Checkbox</type>
</CustomField>