force-app/main/default/objects/Opportunity/fields/Invoice_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Gross_Price__c</fullName>
    <formula>Invoice_Net_Price__c +   X19_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>