force-app/main/default/objects/Opportunity/fields/Invoice_Insurant_Copay_Text__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Insurant_Copay_Text__c</fullName>
    <description>Added this field to display the copay amount in text. As SDocs is adding bracket to negative number, if the field is number.</description>
    <formula>TEXT( CEILING(Invoice_Insurant_Copay__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Insurant Copay Text</label>
    <type>Text</type>
</CustomField>