force-app/main/default/objects/Opportunity/fields/Latest_Docusign_Received_ID__c.field-meta.xml
<CustomField>
    <fullName>Latest_Docusign_Received_ID__c</fullName>
    <description>The envelope id of the latest completed Docusign document</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Docusign Received ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>