force-app/main/default/objects/Opportunity/fields/Medical_Advice_Number_Products_Total_Amt__c.field-meta.xml
<CustomField>
    <fullName>Medical_Advice_Number_Products_Total_Amt__c</fullName>
    <description>Rolls up the total price amount of the products, which have the flag Is_Medical_Advice_Numbered_Product__c set</description>
    <label>Medical Advice Number Products Total Amt</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.UnitPrice</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>