force-app/main/default/objects/Opportunity/fields/Missing_HI_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_HI_Information__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description>To easily identify if any Health Insurance Information is missing. Specially for UK &amp; IE.</description>
    <label>Missing HI Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Funding approval letter</fullName>
            </value>
            <value>
                <fullName>Set up form</fullName>
            </value>
            <value>
                <fullName>Patient Details – NHS number/patient identifier</fullName>
            </value>
            <value>
                <fullName>Initial delivery address</fullName>
            </value>
            <value>
                <fullName>Incomplete address</fullName>
            </value>
            <value>
                <fullName>Billing Address Query</fullName>
            </value>
            <value>
                <fullName>Outstanding Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>