force-app/main/default/objects/Opportunity/fields/Number_of_Approved_Orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approved_Orders__c</fullName>
    <label>Number of Approved Orders</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>