force-app/main/default/objects/Opportunity/fields/Ordering_Process__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Process__c</fullName>
    <label>Ordering Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
                <label>CRM - Self Pay</label>
            </value>
            <value>
                <fullName>ECOM</fullName>
            </value>
            <value>
                <fullName>Payor</fullName>
                <label>CRM - Third Party Payor Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>