force-app/main/default/objects/Opportunity/fields/Other_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Other_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For simultaneous multiple Opportunities processing</description>
    <label>Other Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Opportunity.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Other Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>