force-app/main/default/objects/Opportunity/fields/Patient_s_Diabetes_Type__c.field-meta.xml
<CustomField>
    <fullName>Patient_s_Diabetes_Type__c</fullName>
    <description>This is same &apos;Patient&apos;s Diabetes Type&apos; as on Account</description>
    <formula>TEXT(Account.Patient_Diabetes_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient&apos;s Diabetes Type</label>
    <type>Text</type>
</CustomField>