force-app/main/default/objects/Opportunity/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payor tied to the Benefit record on Opportunity</description>
    <label>Payor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Payor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Payor)</relationshipLabel>
    <relationshipName>Opportunities_Payor</relationshipName>
    <type>Lookup</type>
</CustomField>