force-app/main/default/objects/Opportunity/fields/Payor_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payor_Payment_Terms__c</fullName>
    <formula>TEXT(Payor__r.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payor Payment Terms</label>
    <type>Text</type>
</CustomField>