force-app/main/default/objects/Opportunity/fields/Pending_Doc_Collection__c.field-meta.xml
<CustomField>
    <fullName>Pending_Doc_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Doc Collection</label>
    <type>Checkbox</type>
</CustomField>