force-app/main/default/objects/Opportunity/fields/Pending_Docs_On_File__c.field-meta.xml
<CustomField>
    <fullName>Pending_Docs_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Docs On File</label>
    <type>Checkbox</type>
</CustomField>