force-app/main/default/objects/Opportunity/fields/Pending_Docs_To_Bill__c.field-meta.xml
<CustomField>
    <fullName>Pending_Docs_To_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Docs To Bill</label>
    <type>Checkbox</type>
</CustomField>