force-app/main/default/objects/Opportunity/fields/Planning_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planning_Start_Date__c</fullName>
    <description>This field is used to store the planning start date when Hold is selected in Processing Planning picklist field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Planning Start Date</label>
    <type>Date</type>
</CustomField>