force-app/main/default/objects/Opportunity/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Text field to track the PO Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>