force-app/main/default/objects/Opportunity/fields/PO_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Reference_Number__c</fullName>
    <formula>Fund__r.PO_Reference_Number__c</formula>
    <label>Fund PO Reference Number</label>
    <type>Text</type>
</CustomField>