force-app/main/default/objects/Opportunity/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Prescriber tied to the consumer Account</description>
    <label>Prescriber</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Prescriber</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Prescriber)</relationshipLabel>
    <relationshipName>Opportunities_Prescriber</relationshipName>
    <type>Lookup</type>
</CustomField>