force-app/main/default/objects/Opportunity/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <description>This field stores the name of Pricebook associated with Opportunity. This formula field is created for reporting as standard pricebook field is not available for reporting with Standard Report Type</description>
    <formula>Pricebook2.Name</formula>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>