force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <formula>Account.Contact_Details__c</formula>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>