force-app/main/default/objects/Opportunity/fields/Processing_Planning__c.field-meta.xml
<CustomField>
    <fullName>Processing_Planning__c</fullName>
    <description>This field is used to store the processing planning status.</description>
    <label>Processing Planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>KV Stop</fullName>
            </value>
            <value>
                <fullName>GKK Stop</fullName>
            </value>
            <value>
                <fullName>G6 Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>