force-app/main/default/objects/Opportunity/fields/QA_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>QA_Failure_Reason__c</fullName>
    <label>QA Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Doppellieferung</fullName>
            </value>
            <value>
                <fullName>Empfangsbestätigung fehlt</fullName>
            </value>
            <value>
                <fullName>falsche Preise</fullName>
            </value>
            <value>
                <fullName>falsche Zuzahlung</fullName>
            </value>
            <value>
                <fullName>fehlende Zuzahlung</fullName>
            </value>
            <value>
                <fullName>GKK fehlt</fullName>
            </value>
            <value>
                <fullName>O-VO fehlt</fullName>
            </value>
            <value>
                <fullName>TechEW fehlt</fullName>
            </value>
            <value>
                <fullName>Versandkosten statt Zuzahlung</fullName>
            </value>
            <value>
                <fullName>Sonstige (Notiz erforderlich)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>