force-app/main/default/objects/Opportunity/fields/QR_Code_Image__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Image__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QR Code Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>