force-app/main/default/objects/Opportunity/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <label>Reason For Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABLEHNUNGSGRÜNDE</fullName>
                <isActive>false</isActive>
                <label>ABLEHNUNGSGRÜNDE</label>
            </value>
            <value>
                <fullName>Anderer Leistungserbringer</fullName>
            </value>
            <value>
                <fullName>Doppelversorgung</fullName>
            </value>
            <value>
                <fullName>Empfängertasche / Zubehör</fullName>
            </value>
            <value>
                <fullName>Ersatzkomponente (Defekt/Verlust/keine Garantie)</fullName>
            </value>
            <value>
                <fullName>Fehlende Indikation</fullName>
            </value>
            <value>
                <fullName>Formfehler</fullName>
            </value>
            <value>
                <fullName>Formfehler: Falsches Produkt</fullName>
            </value>
            <value>
                <fullName>Formfehler: Versichertennummer existiert nicht</fullName>
            </value>
            <value>
                <fullName>Formfehler: Versorgungszeitraum fehlt/falsch</fullName>
            </value>
            <value>
                <fullName>Indikation nicht mehr gegeben</fullName>
            </value>
            <value>
                <fullName>Kassenwechsel</fullName>
            </value>
            <value>
                <fullName>MDK Prüfung</fullName>
            </value>
            <value>
                <fullName>MDK Prüfung dauert an</fullName>
            </value>
            <value>
                <fullName>MDK-Prüfung negativ: Fehlende Indikation</fullName>
            </value>
            <value>
                <fullName>MDK-Prüfung negativ: Fehlende Mitwirkungspflicht Patient</fullName>
            </value>
            <value>
                <fullName>MDK-Prüfung negativ: Gutachten fehlt</fullName>
            </value>
            <value>
                <fullName>Mehrbedarf</fullName>
            </value>
            <value>
                <fullName>Mitwirkungspflicht des Versicherten nicht erfolgt</fullName>
            </value>
            <value>
                <fullName>Neue Anforderungen der Kasse</fullName>
            </value>
            <value>
                <fullName>ohne Begründung</fullName>
            </value>
            <value>
                <fullName>Preise</fullName>
            </value>
            <value>
                <fullName>Sonstige (Notiz erforderlich)</fullName>
            </value>
            <value>
                <fullName>Systemwechsel G4 oder G5</fullName>
            </value>
            <value>
                <fullName>Systemwechsel Upgrade G6</fullName>
            </value>
            <value>
                <fullName>Therapieänderung</fullName>
            </value>
            <value>
                <fullName>Unterlagen fehlen</fullName>
            </value>
            <value>
                <fullName>Versorgungswunsch zurückgenommen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>