force-app/main/default/objects/Opportunity/fields/Reason_For_Return_For_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Return_For_Adjustment__c</fullName>
    <label>Reason For Return For Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beantragung zu früh</fullName>
            </value>
            <value>
                <fullName>Beantragung zu spät</fullName>
            </value>
            <value>
                <fullName>Doppelversorgung</fullName>
            </value>
            <value>
                <fullName>Formfehler</fullName>
            </value>
            <value>
                <fullName>Formfehler Arzt-/Betriebsstättennummer existiert nicht</fullName>
            </value>
            <value>
                <fullName>Formfehler Falsches Produkt</fullName>
            </value>
            <value>
                <fullName>Formfehler LKZ falsch/fehlt</fullName>
            </value>
            <value>
                <fullName>Formfehler Versichertennummer existiert nicht bei Kasse</fullName>
            </value>
            <value>
                <fullName>Formfehler Versorgungszeitraum fehlt/falsch</fullName>
            </value>
            <value>
                <fullName>Gründe für Rückläufer</fullName>
            </value>
            <value>
                <fullName>Neue Anforderungen der Kasse</fullName>
            </value>
            <value>
                <fullName>Sonstiges (Notiz erforderlich)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>