force-app/main/default/objects/Opportunity/fields/Receiver_Max__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Max__c</fullName>
    <label>Receiver Max $</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>