force-app/main/default/objects/Opportunity/fields/Receiver_Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Max_Qty__c</fullName>
    <label>Receiver Max Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>