force-app/main/default/objects/Opportunity/fields/Referral_Order__c.field-meta.xml
<CustomField>
    <fullName>Referral_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Starter Kit Order</description>
    <label>Referral Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Opportunities (Referral Order)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>