force-app/main/default/objects/Opportunity/fields/Rx_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Rx_Date_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Date Received</label>
    <type>Date</type>
</CustomField>