force-app/main/default/objects/Opportunity/fields/Rx_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Rx_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Expiration Date</label>
    <type>Date</type>
</CustomField>