force-app/main/default/objects/Opportunity/fields/Send_To_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Oracle</label>
    <type>Checkbox</type>
</CustomField>