force-app/main/default/objects/Opportunity/fields/Sensor_Max__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Max__c</fullName>
    <label>Sensor Max $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>