force-app/main/default/objects/Opportunity/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Account.ShippingStreet + &apos;, &apos; + Account.ShippingCity + &apos;, &apos; +  Account.ShippingPostalCode</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>