force-app/main/default/objects/Opportunity/fields/Total_amount_contractee__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_contractee__c</fullName>
    <formula>Total_Gross_Price__c -  Calculated_Copay__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount Contractee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>