force-app/main/default/objects/Opportunity/fields/Total_Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Price__c</fullName>
    <description>Calculates Gross Price</description>
    <formula>Amount +  X19_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>