force-app/main/default/objects/Opportunity/fields/Training_Confirmation_Channel__c.field-meta.xml
<CustomField>
    <fullName>Training_Confirmation_Channel__c</fullName>
    <label>Training Confirmation Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Office</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>