force-app/main/default/objects/Opportunity/fields/Training_Confirmation_Received__c.field-meta.xml
<CustomField>
    <fullName>Training_Confirmation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Confirmation Received</label>
    <type>Checkbox</type>
</CustomField>