force-app/main/default/objects/Opportunity/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>Date when the training happened</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>