force-app/main/default/objects/Opportunity/fields/Training_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Training_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Letter Sent</label>
    <type>Checkbox</type>
</CustomField>