force-app/main/default/objects/Opportunity/fields/Training_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Letter_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Training Letter Sent Date</label>
    <type>Date</type>
</CustomField>