force-app/main/default/objects/Opportunity/fields/Transmitter_Max__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Max__c</fullName>
    <label>Transmitter Max $</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>